--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   file_selector: ^0.8.2
   file_selector_platform_interface: ^2.0.0
   pdf: ^3.5.0
+  flutter_staggered_grid_view: ^0.4.0
 
 dev_dependencies:
   flutter_test:
