--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   file_selector_platform_interface: ^2.0.0
   pdf: ^3.5.0
   flutter_staggered_grid_view: ^0.4.0
+  universal_html: ^2.0.8
 
 dev_dependencies:
   flutter_test:
